<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:gravity="center"
            android:textSize="28sp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/blueOsc"
            android:layout_marginBottom="32dp"/>

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasenia"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_inicio"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/coffee_dark"
            android:textStyle="bold"
            android:elevation="4dp"/>

        <Button
            android:id="@+id/btnResgitro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnregistro"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/coffee_medium"
            android:textStyle="bold"
            android:elevation="4dp"/>

        <Button
            android:id="@+id/btnProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mete_productos"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/coffee_medium"
            android:textStyle="bold"
            android:elevation="4dp"/>

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fraseagradecimiento"
            android:textColor="@color/cancelar"
            android:textAlignment="center"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
