<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvNombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_de_usuario"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo_electr_nico"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvRol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rol"
            android:layout_marginBottom="8dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>